--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,21 +1,18 @@
 server:
   port: 8001
   servlet:
-    context-path: /spring-aws-document-db
+    context-path: /spring-with-mongo-db-replica-set
 
 spring:
   data:
     mongodb:
-      uri: "mongodb://root:root@primary:27017,replica01:27017,replica02:27017/customer?authSource=admin&replicaSet=tutorial-cluster&readPreference=secondary"
+      uri: "mongodb://root:root@primary:27017,replica01:27017,replica02:27017/tutorial-db?authSource=admin&replicaSet=tutorial-cluster&readPreference=secondary"
 
-#spring:
-#  data:
-#    mongodb:
- #     host: "localhost"
-#      port: 27017
-#      database: "customer"
-#      username: "root"
-#      password: "root"
-#      authentication-database: admin
-#      replica-set-name: tutorial-cluster
-  #
+logging:
+  level:
+    org:
+      springframework:
+        data:
+          mongodb:
+            core:
+              MongoTemplate: DEBUG
